--- a/spring-pulsar-gae-demo-reactive/src/main/appengine/app.yaml
+++ b/spring-pulsar-gae-demo-reactive/src/main/appengine/app.yaml
@@ -5,5 +5,5 @@ service: sps-gae-app-reactive
 manual_scaling:
   instances: 1
 
-env_variables:
-  SPRING_PROFILES_ACTIVE: 'datastax'
+includes:
+  - ../env/.cloudenv-gae.yaml
