--- a/spring-pulsar-gae-demo-reactive/src/main/resources/application.yml
+++ b/spring-pulsar-gae-demo-reactive/src/main/resources/application.yml
@@ -2,6 +2,8 @@
 server.port: ${PORT:0}
 
 spring:
+  config:
+    import: optional:file:../env/.cloudenv.yaml
   pulsar:
     producer:
       cache:
@@ -17,15 +19,14 @@ spring:
     client:
       auth-plugin-class-name: org.apache.pulsar.client.impl.auth.AuthenticationToken
       authentication:
-        token: <auth-token>
-      service-url: <service-url>
+        token: ${DATASTAX_AUTH_TOKEN:<auth-token-goes-here>}
+      service-url: ${DATASTAX_BROKER_URL:<broker-service-url-goes-here>}
     administration:
       auth-plugin-class-name: org.apache.pulsar.client.impl.auth.AuthenticationToken
       authentication:
-        token: <auth-token>
-      service-url: <service-url>
+        token: ${DATASTAX_AUTH_TOKEN:<auth-token-goes-here>}
+      service-url: ${DATASTAX_ADMIN_URL:<admin-service-url-goes-here>}
 demo-topic-name: "persistent://sps-tenant1/sps-ns1/sps-gae-reactive-demo-topic"
-
 
 ---
 spring:
@@ -36,11 +37,11 @@ spring:
     client:
       auth-plugin-class-name: org.apache.pulsar.client.impl.auth.AuthenticationToken
       authentication:
-        token: <auth-token>
-      service-url: <service-url>
+        token: ${STREAM_NATIVE_AUTH_TOKEN:<auth-token-goes-here>}
+      service-url: ${STREAM_NATIVE_BROKER_URL:<broker-service-url-goes-here>}
     administration:
       auth-plugin-class-name: org.apache.pulsar.client.impl.auth.AuthenticationToken
       authentication:
-        token: <auth-token>
-      service-url: <service-url>
+        token: ${STREAM_NATIVE_AUTH_TOKEN:<auth-token-goes-here>}
+      service-url: ${STREAM_NATIVE_ADMIN_URL:<admin-service-url-goes-here>}
 demo-topic-name: "persistent://sps-tenant1/sps-ns1/sps-gae-reactive-demo-topic"
