Move topic name to record based config props

--- a/spring-pulsar-gae-demo-imperative/src/main/resources/application.yml
+++ b/spring-pulsar-gae-demo-imperative/src/main/resources/application.yml
@@ -3,12 +3,14 @@ server.port: ${PORT:0}
 
 spring:
   config:
-    import: optional:file:../env/.cloudenv.yaml
+    import:
+      - optional:file:./env/.cloudenv.yaml
+      - optional:file:../env/.cloudenv.yaml
   pulsar:
     producer:
       cache:
         expire-after-access: 10s
-demo-topic-name: "persistent://public/default/sps-gae-imperative-demo-topic"
+demo.topic-name: "persistent://public/default/sps-gae-imperative-demo-topic"
 
 ---
 spring:
@@ -20,13 +22,13 @@ spring:
       auth-plugin-class-name: org.apache.pulsar.client.impl.auth.AuthenticationToken
       authentication:
         token: ${DATASTAX_AUTH_TOKEN:<auth-token-goes-here>}
-      service-url: ${DATASTAX_BROKER_URL:<broker-service-url-goes-here>}
+      service-url: ${DATASTAX_BROKER_URL:<xxbroker-service-url-goes-here>}
     administration:
       auth-plugin-class-name: org.apache.pulsar.client.impl.auth.AuthenticationToken
       authentication:
         token: ${DATASTAX_AUTH_TOKEN:<auth-token-goes-here>}
       service-url: ${DATASTAX_ADMIN_URL:<admin-service-url-goes-here>}
-demo-topic-name: "persistent://sps-tenant1/sps-ns1/sps-gae-imperative-demo-topic"
+demo.topic-name: "persistent://sps-tenant1/sps-ns1/sps-gae-imperative-demo-topic"
 
 ---
 spring:
@@ -44,4 +46,4 @@ spring:
       authentication:
         token: ${STREAM_NATIVE_AUTH_TOKEN:<auth-token-goes-here>}
       service-url: ${STREAM_NATIVE_ADMIN_URL:<admin-service-url-goes-here>}
-demo-topic-name: "persistent://sps-tenant1/sps-ns1/sps-gae-imperative-demo-topic"
+demo.topic-name: "persistent://sps-tenant1/sps-ns1/sps-gae-imperative-demo-topic"
