Add tenant and namespace to props

--- a/env/.cloudenv.yaml.template
+++ b/env/.cloudenv.yaml.template
@@ -1,6 +1,10 @@
+DATASTAX_TENANT: <tenant-id-goes-here>
+DATASTAX_NAMESPACE: <namespace-goes-here>
 DATASTAX_BROKER_URL: <broker-service-url-goes-here>
 DATASTAX_ADMIN_URL: <admin-service-url-goes-here>
 DATASTAX_AUTH_TOKEN: <auth-token-goes-here>
+STREAM_NATIVE_TENANT: <tenant-id-goes-here>
+STREAM_NATIVE_NAMESPACE: <namespace-goes-here>
 STREAM_NATIVE_BROKER_URL: <broker-service-url-goes-here>
 STREAM_NATIVE_ADMIN_URL: <admin-service-url-goes-here>
 STREAM_NATIVE_AUTH_TOKEN: <auth-token-goes-here>
