--- a/spring-pulsar-gae-demo-imperative/src/main/resources/application.yml
+++ b/spring-pulsar-gae-demo-imperative/src/main/resources/application.yml
@@ -10,7 +10,10 @@ spring:
     producer:
       cache:
         expire-after-access: 10s
-demo.topic-name: "persistent://public/default/sps-gae-imperative-demo-topic"
+demo:
+  tenant: public
+  namespace: default
+  topic-name: "persistent://${demo.tenant}/${demo.namespace}/sps-gae-imperative-demo-topic"
 
 ---
 spring:
@@ -22,13 +25,15 @@ spring:
       auth-plugin-class-name: org.apache.pulsar.client.impl.auth.AuthenticationToken
       authentication:
         token: ${DATASTAX_AUTH_TOKEN:<auth-token-goes-here>}
-      service-url: ${DATASTAX_BROKER_URL:<xxbroker-service-url-goes-here>}
+      service-url: ${DATASTAX_BROKER_URL:<broker-service-url-goes-here>}
     administration:
       auth-plugin-class-name: org.apache.pulsar.client.impl.auth.AuthenticationToken
       authentication:
         token: ${DATASTAX_AUTH_TOKEN:<auth-token-goes-here>}
       service-url: ${DATASTAX_ADMIN_URL:<admin-service-url-goes-here>}
-demo.topic-name: "persistent://sps-tenant1/sps-ns1/sps-gae-imperative-demo-topic"
+demo:
+  tenant: ${DATASTAX_TENANT:<tenant-goes-here>}
+  namespace: ${DATASTAX_NAMESPACE:<namespace-goes-here>}
 
 ---
 spring:
@@ -46,4 +51,6 @@ spring:
       authentication:
         token: ${STREAM_NATIVE_AUTH_TOKEN:<auth-token-goes-here>}
       service-url: ${STREAM_NATIVE_ADMIN_URL:<admin-service-url-goes-here>}
-demo.topic-name: "persistent://sps-tenant1/sps-ns1/sps-gae-imperative-demo-topic"
+demo:
+  tenant: ${STREAM_NATIVE_TENANT:<tenant-goes-here>}
+  namespace: ${STREAM_NATIVE_NAMESPACE:<namespace-goes-here>}
